--- a/src/app/components/sidebar/sidebar.component.scss
+++ b/src/app/components/sidebar/sidebar.component.scss
@@ -34,6 +34,11 @@ mat-sidenav{
     background-color: $color-bg-darker;
   }
 
+  &__homepage {
+    text-decoration: none;
+    color: inherit;
+  }
+
   &__title{
     margin: 1rem;
     display: flex;
@@ -46,10 +51,6 @@ mat-sidenav{
     * {
       color: $color-text-light;
     }
-
-  }
-
-  &__header{
 
   }
 
@@ -68,6 +69,51 @@ mat-sidenav{
 
     p {
       margin: 0;
+    }
+  }
+
+  &__footer {
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    bottom: 0;
+    width: 100%;
+    height: 3rem;
+    position: absolute;
+    color: $color-text-dark;
+    margin-bottom: 1rem;
+
+    &_github {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin: auto;
+      margin-left: 1rem;
+      height: 100%;
+      color:inherit;
+    }
+
+    &_separator {
+      margin: 1rem;
+      color: $color-accent-light;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    &_email {
+      padding: 0;
+      text-align: center;
+      margin: auto;
+      margin-right: 1rem;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color:inherit;
+      text-decoration: none;
     }
   }
 
